--- a/index.html
+++ b/index.html
@@ -62,58 +62,7 @@
                 <td><font size="3" color="#191970">
 
 		    <ul>
-		      <li>日本気象学会2023年秋季大会において、オゾン研究連絡会を開催します。ふるってご参加ください。</li>
-<pre>
-オゾン研究連絡会
-日時:2023 年 10 月 23 日(月)
-(大会第 1 日)18:00-20:00
-場所:D 会場 白檀
-
-テーマ:
-日本におけるオゾン観測の変遷と今後のオゾン研究の方向性を議論する
-
-趣旨:
-日本気象学会におけるオゾン研究連絡会の体制が,今年から新たに
-第 4 期の体制として再スタートをきった.そこで,向こう 10 年間
-のオゾン研究の方向性を展望するために,まずはこれまでの日本の
-オゾン研究の振り返りを行ったうえで,今後どのような研究対象を
-ターゲットに,観測技術や解析技術を発展させていくべきかについて,
-関連の研究者の間で議論したいと考えている.
-その中で,気象庁における最近の日本におけるオゾン観測体制の変更
-(2018 年 2 月の,札幌と那覇でのオゾンゾンデ観測と紫外域日射観測,
-及び南鳥島でのオゾン全量観測と反転観測の終了,並びに 2022 年 1 月の,
-札幌と那覇でのオゾン全量観測と反転観測の終了)に関して,
-気象庁の担当者からその背景等を説明していただく.
-そのうえで,これまでの日本の地上・ゾンデからのオゾン観測の歴史と
-その貢献について概観し,特に最近重要性を増してきた対流圏における
-オゾン監視の重要性について確認する.
-さらに,最近発行された WMO/UNEP 2022 オゾンアセスメントレポートの
-トピックについて紹介する.
-最後に,最近の気象庁の観測体制の変更やオゾン層回復傾向といわれる
-近年における研究対象の変遷も踏まえながら,向こう 10 年間の日本の
-オゾン研究の将来を展望する.
-
-プログラム:
-
-1. 趣旨説明とオゾン研究連絡会の体制変更について
-中島英彰(国環研)
-
-2. 気象庁による日本のオゾン観測体制の変更について
-青柳暁典(気象庁)
-
-3. これまでの日本の地上・ゾンデからのオゾン観測の歴史と貢献
-藤原正智(北大)
-
-4. 対流圏オゾン監視の重要性について
-須藤健悟(名大)
-
-5. WMO/UNEP 2022 O3 Assessment Report の概要について
-中島英彰(国環研)
-
-連絡先:中島英彰(国立環境研究所)			
-
-</pre>
-		      
+		      <li>2024年度もオゾン研究連絡会を開催します。</li>
 		    </ul>
 
 		</font></td>             
@@ -165,7 +114,7 @@
               <tr>
                 <td width="10"></td>
                 <td width="50"><font size="3" color="#191970"></font></td>
-                <td><font size="3" color="#191970">オゾン研究連絡会では, 情報交換・連絡会の案内などを目的として <img src="./fig/ozc-j.png"> というメーリングリストを運営しています. 登録を希望される方は <img src="./fig/ooo.png"> まで連絡願います。 </font></td>
+                <td><font size="3" color="#191970">オゾン研究連絡会では, 情報交換・連絡会の案内などを目的として <img src="./fig/ozc-j_2.PNG" height="20"> というメーリングリストを運営しています. 登録を希望される方は <img src="./fig/ooo_2.PNG" height="20"> まで連絡願います。 </font></td>
               </tr>
             </table>
           </td>
@@ -184,7 +133,7 @@
               <tr>
                 <td width="10"></td>
                 <td width="50"><font size="3" color="#191970"></font></td>
-                <td><font size="3" color="#191970">本ウェブページ・オゾン研究連絡会に関するご質問・お問い合わせ等は <img src="./fig/ooo.png"> までお願いします。 </font></td>
+                <td><font size="3" color="#191970">本ウェブページ・オゾン研究連絡会に関するご質問・お問い合わせ等は <img src="./fig/ooo_2.PNG" height="20"> までお願いします。 </font></td>
               </tr>
             </table>
 
