--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       margin-right:10px;
       .class01 {color: black; font: bold 10px/11px verdana, arial, helvetica, san-serif;}
       .class02 {color: white; font: bold 16px/17px verdana, arial, helvetica, san-serif;}
+      
+      @media screen and (max-width: 480px) {
+        body{
+	      width:95%;
+         }
+      }
     </style>
     <title>オゾン研究連絡会</title>
 
