--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       margin-right:10px;
       .class01 {color: black; font: bold 10px/11px verdana, arial, helvetica, san-serif;}
       .class02 {color: white; font: bold 16px/17px verdana, arial, helvetica, san-serif;}
+      a:link { color: #7b797b; }
+      a:visited { color: #7b797b; }
       
       @media screen and (max-width: 480px) {
         body{
@@ -34,7 +36,7 @@
 
 
   <body leftmargin="0" topmargin="0" class="class01" margin="0"
-    link="#5790e5" marginheight="0" alink="#7b797b" background="img/" vlink="#7b797b">
+    marginheight="0" background="img/" vlink="#7b797b">
   
     <table align="center" bgcolor="#ffffff" border="0"
       cellpadding="0" cellspacing="0" width="750">
@@ -88,7 +90,7 @@
 		      日時：2024年11月14日（木）（大会第3日）セッション終了後2時間程度<br />
 		      場所：C会場（中会議室201）<br />
 		      テーマ：国際オゾンシンポジウム報告と近年のオゾン研究の動向について<br />
-			  <a href="https://sites.google.com/metsoc.or.jp/atm2024/program/program_detail">日本気象学会2024年度秋季大会　大会詳細案内</a>
+			  <a href="https://sites.google.com/metsoc.or.jp/atm2024/program/program_detail" target="_blank>日本気象学会2024年度秋季大会　大会詳細案内</a>
 		      </li>
 		    </ul>
 
