--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       margin-right:10px;
       .class01 {color: black; font: bold 10px/11px verdana, arial, helvetica, san-serif;}
       .class02 {color: white; font: bold 16px/17px verdana, arial, helvetica, san-serif;}
-      a:link { color: #7b797b; }
+      a:link { color: #5790e5; }
       a:visited { color: #7b797b; }
       
       @media screen and (max-width: 480px) {
@@ -36,7 +36,7 @@
 
 
   <body leftmargin="0" topmargin="0" class="class01" margin="0"
-    marginheight="0" background="img/" vlink="#7b797b">
+    marginheight="0" background="img/">
   
     <table align="center" bgcolor="#ffffff" border="0"
       cellpadding="0" cellspacing="0" width="750">
