--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </tr> 
         <tr>
           <td height="18" align="center" bgcolor="#191970" valign="middle">
-            <a href="#new"><font class="class02">最新情報</font></a> 
+            <a href="#new"><font class="class02">&nbsp;&nbsp;&nbsp;最新情報</font></a> 
             <font color="#ffffff">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font>
 	    <a href="#act"><font class="class02">活動概要</font></a>
 	    <font color="#ffffff">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font>
@@ -60,8 +60,8 @@
             <font color="#ffffff">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font>
 	    <a href="#ct"><font class="class02">問い合わせ</font></a>
 	    <font color="#ffffff">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font>
-	    <a href="#link"><font class="class02">リンク</font></a> 
-            &nbsp; 
+	    <a href="#link"><font class="class02">リンク&nbsp;</font></a> 
+          &nbsp;
           </td>
         </tr>
       </tbody>
