--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <tr>
               <td>
                 <br />
-                <h3><b><a name="mail">&#9632; リンク</a></b></h3>
+                <h3><b><a name="link">&#9632; リンク</a></b></h3>
                 <table width="650" border="0" cellspacing="2" cellpadding="0">
                   <tr>
                     <td width="10"></td>
