--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="robots" content="all" />
     <meta name="http-equiv" content="X-Robots-Tag : all" />
     <meta name="googlebot" content="all" />
+    <!-- <meta name="description" content="オゾン研究連絡会は1990年に気象学会承認の研究連絡会として発足して以来、気象学会毎の連絡会会合を通じて活動をおこない，大気微量成分関係分野の発展に貢献してきています。" /> -->
     <meta name="description" content="オゾン研究連絡会は、2024年11月14日（木）気象学会C会場（中会議室201）にて開催します。" />
-    <!-- <meta name="description" content="オゾン研究連絡会は1990年に気象学会承認の研究連絡会として発足しました。以来、春・秋季気象学会ごとの連絡会会合を通じて活動をおこない，大気微量成分関係分野の発展に貢献してきています。" /> -->
-    <meta name="keywords" content="オゾン 日本気象学会 研究連絡会" />
+	<meta name="keywords" content="オゾン 日本気象学会 研究連絡会" />
     <style type="text/css">
       text-align:left;
       background-color:#ffffff;
