--- a/index.html
+++ b/index.html
@@ -88,11 +88,7 @@
                 <td>
 				  <div class="class03">
   		          <ul>
-		            <li>2024年度のオゾン研究連絡会<br />
-		                日時：2024年11月14日（木）（大会第3日）セッション終了後2時間程度（18:00開始予定）<br />
-		                場所：C会場（中会議室201）<br />
-		                テーマ：国際オゾンシンポジウム報告と近年のオゾン研究の動向について<br />
-			            <a href="https://sites.google.com/metsoc.or.jp/atm2024/program/program_detail" target="_blank">日本気象学会2024年度秋季大会　大会詳細案内</a>
+		            <li>2025年度のオゾン研究連絡会の開催は見送ります。
 		            </li>
 		          </ul>
 			      </div>
